--- a/lectures/Test.ipynb
+++ b/lectures/Test.ipynb
@@ -11,11 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a matrix of zeros with the desired shape, for example, 20x20\n",
+    "matrix = np.zeros((20, 20))\n",
+    "\n",
+    "# Set the eleventh row (index 10) to ones\n",
+    "matrix[10, :] = 1\n",
+    "\n",
+    "matrix"
    ]
   },
   {
@@ -81,7 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +116,7 @@
        "       [1., 1., 1.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
